# ros2_MinimalCustomService

./: README.md
custom_service/: CMakeLists.txt  package.xml
custom_service/srv/: CustomService.srv
minimal_service/: CMakeLists.txt  package.xml
minimal_service/include/minimal_service/: minimal_service_client_class.hpp  minimal_service_server_class.hpp
minimal_service/launch/: minimal_service_cpp.launch.py
minimal_service/src/: minimal_service_client_class.cpp  minimal_service_client_node.cpp  minimal_service_server_class.cpp  minimal_service_server_node.cpp
